Touching up UI and setting transparent status bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
 
     // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // Facebook shimmer effect
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
